--- a/AUTHORS
+++ b/AUTHORS
@@ -10,4 +10,5 @@ Main Devs, in roughly chronological order
 * Andrew Sutton (umbrello2)
 * Brian Thomas (advanced code generators, associations, various)
 * Oliver Kellogg (many areas)
+* Daniel Calviño Sánchez (refactoring, UI behavior)
 
