createUMLObject(): Use Model_Utils::convert_OT_MT() when parentPkg is NULL. BUG:137564
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=606168

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.5.6
+* Bugs/wishes from http://bugs.kde.org:
+* Artifacts of a component diagram are wrongly placed in Deployment View folder (137564)
+
 Version 1.5.52
 
 * Fixed segfault in UMLClassifier::checkOperationSignature()
