--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 Version 1.5.6
+
+* Fixed save/reload of association widgets for collaboration diagrams
+  http://www.geeksoc.org/~jr/umbrello/uml-devel/9825.html
+  http://www.geeksoc.org/~jr/umbrello/uml-devel/9857.html
 * Bugs/wishes from http://bugs.kde.org:
 * Artifacts of a component diagram are wrongly placed in Deployment View folder (137564)
 
