Apply DrawNoteOnTop.diff by Achim Spangler at http://www.geeksoc.org/~jr/umbrello/uml-devel/9863.html Achim, your continual bugfixes earn you an honor seat in the AUTHORS file :)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=608561

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,4 +11,4 @@ Main Devs, in roughly chronological order
 * Brian Thomas (advanced code generators, associations, various)
 * Oliver Kellogg (many areas)
 * Daniel Calviño Sánchez (refactoring, UI behavior)
-
+* Achim Spangler (countless bugfixes)
