Apply attachment 19019 from Michael Palomas: > Changed *colour to *color in UMLWidget::saveToXMI, and in loadFromXMI first > try to retrieve old british  spelling to keep backward compatibility, then > try with the american one. BUG:136061
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=616890

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@ Version 1.5.6
 * Association line nodes don't drag along with multiply-selected classes (57878)
 * Disappearing parameters when editing class properties (114477)
 * Umbrello saves too much copies at xmi (135606)
+* XML scheme: mixup of attribute names: *color and *colour (136061)
 * Artifacts of a component diagram are wrongly placed in Deployment View folder (137564)
 * Incorrect export to SQL (138139)
 
