Model_Utils::parseOperation(): Special case "operator()" into desc.m_name. UMLOperation::toString(): Remove tests like s.contains("(") or s.contains(")"),  they disturb the handling of "operator()". BUG:139147
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=617069

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@ Version 1.5.6
 * XML scheme: mixup of attribute names: *color and *colour (136061)
 * Artifacts of a component diagram are wrongly placed in Deployment View folder (137564)
 * Incorrect export to SQL (138139)
+* Parentheses do not appear around the parameters of the C++ operator() (139147)
 
 Version 1.5.52
 
