--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@ Version 1.5.6
   http://www.geeksoc.org/~jr/umbrello/uml-devel/9863.html
 * Optimized printer margins
   http://www.geeksoc.org/~jr/umbrello/uml-devel/9895.html
+* Improved code import for Ada and Pascal (SVN commits: 621845, 622128, 622396, 623316,
+                                           623421, and 624257)
 * Bugs/wishes from http://bugs.kde.org:
 * Association line nodes don't drag along with multiply-selected classes (57878)
 * Disappearing parameters when editing class properties (114477)
