addAssociationInViewAndDoc(): Don't attempt umla->setUMLPackage() when umla is NULL. Thanks to Philippe Le Gal for the problem report at   http://sourceforge.net/mailarchive/forum.php?thread_id=31539549&forum_id=460 CCMAIL:plegal@appert44.org
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=627460

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.61
+
+* Fixed crash on anchoring note to diagram object
+  http://sourceforge.net/mailarchive/forum.php?thread_id=31539549&forum_id=460
+
 Version 1.5.6
 
 * Fixed save/reload of association widgets for collaboration diagrams
