--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Version 1.5.7
 
 * Bugs fixed from http://bugs.kde.org:
+* %date% and %time% not being parsed (96612)
 * Relationships for entities do not live outside of an entity relationship diagram (125146)
 * Javascript Code Generation creates bad format methods (135540)
 * Crash when deleting the link between a package and a class (141602)
