--- a/THANKS
+++ b/THANKS
@@ -26,6 +26,7 @@ Albert Cervera <albertca @jazzfree.com>
 Albert Astals Cid <tsdgeos @terra.es>
 Richard Dale <duke @tipitina.demon.co.uk>
 Vincent Decorges <vincent.decorges @eivd.ch>
+Antoine Dopffer <adopffer @nerdshack.com>
 Alan Ezust <alan.ezust @gmail.com>
 Jean-Remy Falleri <jr.falleri @gmail.com>
 Andi Fischer <andi.fischer @hispeed.ch>
