writeClass (aggregations, compositions): Do not generate code when `c´ is at role B.  Generate code for the role B object. BUG:135527
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=634263

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Version 1.5.7
 * Bugs fixed from http://bugs.kde.org:
 * %date% and %time% not being parsed (96612)
 * Relationships for entities do not live outside of an entity relationship diagram (125146)
+* Javascript wrong Code Generation (135527)
 * Javascript Code Generation creates bad format methods (135540)
 * Crash when deleting the link between a package and a class (141602)
 * Ada95 Code Generation Errors for Aggregation (141644)
