setName(): Remove special-casing code for when m_pName is non-NULL but strName  is empty. This is a sensitive spot so I put the offending code in a comment  for documentation. BUG:141813
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=634394

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Version 1.5.7
 * Javascript Code Generation creates bad format methods (135540)
 * Crash when deleting the link between a package and a class (141602)
 * Ada95 Code Generation Errors for Aggregation (141644)
+* Unable to delete multiplicity information or lable from an association (141813)
 
 Version 1.5.61
 
