--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,12 @@
 Version 1.5.7
 
 * Bugs fixed from http://bugs.kde.org:
+* Support for utility classes in Ada import and code generator (89167)
 * %date% and %time% not being parsed (96612)
-* Relationships for entities do not live outside of an entity relationship diagram (125146)
+* Relationships for entities do not live outside of the diagram (125146)
 * Javascript wrong Code Generation (135527)
 * Javascript Code Generation creates bad format methods (135540)
+* Incorrect Association Properties text (139872)
 * Associations not updated during move of class on diagram (140709)
 * Crash when deleting the link between a package and a class (141602)
 * Ada95 Code Generation Errors for Aggregation (141644)
