Add C# code generator by Ferenc Veres, see http://www.geeksoc.org/~jr/umbrello/uml-devel/10058.html Still work in progress - his comments no. 3 to 11 are not yet solved. Perhaps somebody in the know of C# could help out. CCBUG:53368
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=635308

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Version 1.5.7
 
-* Bugs fixed from http://bugs.kde.org:
+* Bugs/wishes from http://bugs.kde.org:
+* C# Code Generation and export (53368)
 * %date% and %time% not being parsed (96612)
 * Relationships for entities do not live outside of the diagram (125146)
 * Javascript wrong Code Generation (135527)
