--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ Version 1.5.7
 
 * Bugs/wishes from http://bugs.kde.org:
 * C# Code Generation and export (53368)
+* Java interface inheritance, abstract classes and generics in code generation
+  (53376)
 * %date% and %time% not being parsed (96612)
 * Relationships for entities do not live outside of the diagram (125146)
 * Javascript wrong Code Generation (135527)
@@ -10,7 +12,8 @@ Version 1.5.7
 * Associations not updated during move of class on diagram (140709)
 * Crash when deleting the link between a package and a class (141602)
 * Ada95 Code Generation Errors for Aggregation (141644)
-* Unable to delete multiplicity information or lable from an association (141813)
+* Unable to delete multiplicity information or lable from an association
+  (141813)
 
 Version 1.5.61
 
