Constructor: Let WRITE_PACKAGE_NAMESPACE default to true,  at least until http://bugs.kde.org/141875 is resolved. BUG:141876
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=635340

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ Version 1.5.7
 * Ada95 Code Generation Errors for Aggregation (141644)
 * Unable to delete multiplicity information or lable from an association
   (141813)
+* C++ code generator does not correctly define namespaces (141876)
 
 Version 1.5.61
 
