findObjectsRelated(): Only consider those associations for which `c' is in  role A. Only add the role B object to the returned list. BUG:141956
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=635772

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@ Version 1.5.7
 * Unable to delete multiplicity information or lable from an association
   (141813)
 * C++ code generator does not correctly define namespaces (141876)
+* Ada code generator generates "withs" in both directions for certain
+  associations (141956)
 
 Version 1.5.61
 
