--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@ Version 1.5.7
 * Java interface inheritance, abstract classes and generics in code generation
   (53376)
 * %date% and %time% not being parsed (96612)
+* Operations of the Interface are not implemented in the class automatically
+  (111593)
 * Relationships for entities do not live outside of the diagram (125146)
 * Javascript wrong Code Generation (135527)
 * Javascript Code Generation creates bad format methods (135540)
