--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Version 1.5.7
 * C# Code Generation and export (53368)
 * Java interface inheritance, abstract classes and generics in code generation
   (53376)
+* Code generation ignores unidirectional association (72042)
 * %date% and %time% not being parsed (96612)
 * Operations of the Interface are not implemented in the class automatically
   (111593)
