--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@ Version 1.5.7
 * Ada95 Code Generation Errors for Aggregation (141644)
 * Unable to delete multiplicity information or label from an association
   (141813)
+* Reinstate code generation options for C++ (141875)
 * C++ code generator does not correctly define namespaces (141876)
 * Ada code generator generates "withs" in both directions for certain
   associations (141956)
