Apply attachment 20064 from Wickersheimer Jeremy: > The patch just set the column stretch factor for col 1 and 3 (name and type > respectively) [...] Thank you for contributing. BUG:143319
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=645266

--- a/THANKS
+++ b/THANKS
@@ -81,6 +81,7 @@ Ferenc Veres <lion @netngine.hu>
 Jean Vittor <jean.vittor @wanadoo.fr>
 Egbert Voigt <Egbert.Voigt @alcatel.de>
 Stefan Walter <sw @gegenunendlich.de>
+Jeremy Wickersheimer <jwickers @gmail.com>
 Yurgen Wolfgang <raptorsforever @softhome.net>
 Maciej J. Woloszyk <mat @esi.com.pl>
 Tobias Wulff <Tobias-Wulff @codeeye.de>
