--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,7 @@ Version 1.5.7
 * Ada code generator always generates methods abstract even if abstract box
   not checked (142093)
 * Missing "with" on Ada code generation for aggregation (142392)
+* Operation Properties "Type" combo box too small (143319)
 
 Version 1.5.61
 
