--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@ Version 1.5.7
   not checked (142093)
 * Missing "with" on Ada code generation for aggregation (142392)
 * Operation Properties "Type" combo box too small (143319)
+* Support duplication of diagrams (143581)
 
 Version 1.5.61
 
