initFields(): Move invocation of  CodeGenFactory::newDeclarationCodeBlock() to  finishInitialization(). If inConstructor is true then no dispatching to the  CPPCodeClassField takes place. BUG:126262
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=647978

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ Version 1.5.7
 * Operations of the Interface are not implemented in the class automatically
   (111593)
 * Relationships for entities do not live outside of the diagram (125146)
+* Crashes while loading file (Advanced Code Generators enabled) (126262)
 * Multiplicity labels often are placed incorrectly (127628)
 * Crash on adding operation to class with Advanced Code Generators enabled
   (131528)
