setAssocType(): Do not  physically delete the floatingtext widgets because  they are also stored in the UMLView::m_WidgetList. One round of applause to valgrind - I wonder how long it would have taken me  to find this bug without it. BUG:143909
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=651424

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@ Version 1.5.7
 * Missing "with" on Ada code generation for aggregation (142392)
 * Operation Properties "Type" combo box too small (143319)
 * Support duplication of diagrams (143581)
+* Crash on changing multiplicity in an association in ERD (143909)
 
 Version 1.5.61
 
