Apply the plot of commit 653599 to AssociationWidget. BUG:144119
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=653641

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@ Version 1.5.7
 * Operation Properties "Type" combo box too small (143319)
 * Support duplication of diagrams (143581)
 * Crash on changing multiplicity in an association in ERD (143909)
+* Class diagram in folder not loaded correctly from xmi (144119)
 
 Version 1.5.61
 
