insertMethod(): Call UMLClassifier::checkOperationSignature() on the new op.  If it exists then copy the properties of the new op to the existing op. All code: Do not call DocWindow::showDocumentation(), it spoils the UMLObject::m_Doc. BUG:144346
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=655250

--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,7 @@ Version 1.5.7
 * Crash on changing multiplicity in an association in ERD (143909)
 * Class diagram in folder not loaded correctly from xmi (144119)
 * Sequence diagram crashes during message inserting (144293)
+* No synchronisation of comments when round-tripping (144346)
 
 Version 1.5.61
 
