writeOperations(): Patch by Jose Gutierrez adds missing "=" at function declaration. BUG:144738
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=658558

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,7 +12,7 @@ Version 1.5.7
 * Association role labels are duplicated (130172)
 * Crash on adding operation to class with Advanced Code Generators enabled (131528)
 * Javascript wrong Code Generation (135527)
-* Javascript Code Generation creates bad format methods (135540)
+* Javascript/ActionScript Code Generation creates bad format methods (135540, 144738)
 * Sequence diagram object size incorrect after toggling "Draw as Actor" (136869)
 * Incorrect Association Properties text (139872)
 * Buttons are not displayed (139913)
