--- a/THANKS
+++ b/THANKS
@@ -33,6 +33,7 @@ Andi Fischer <andi.fischer @hispeed.ch>
 Pascal Fleury <fleury @users.sourceforge.net>
 JP Fournier (jfournier121 @rogers.com)
 Gregorio Guidi <g.guidi @sns.it>
+Jose Gutierrez <joseg @mapasysistemas.com.ar>
 Esben Mose Hansen <esben @despammed.com>
 Olaf Hartig <OleBowle @gmx.de>
 Marius Helf <marius.helf @gmx.de>
