Apply attachment 20435 by Jose Gutierrez: > * generate correct type and field name for associations > * use rolenames for field name associations > * use attributes in role (AS) > * insert docs Thanks Jose for contributing. BUG:144788
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=658784

--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@ Version 1.5.7
 * Sequence diagram crashes during message inserting (144293)
 * No synchronisation of comments when round-tripping (144346)
 * Crash when loading xmi with actor as object of sequence diagram (144442)
+* ActionScript/JavaScript association code generation error (144788)
 
 Version 1.5.61
 
