Constructor: Initialize m_unconstrainedPositionY. Thanks to Tonton for the fix (attachment 20520.) BUG:145202
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=662970

--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,7 @@ Version 1.5.7
 * Crash when loading xmi with actor as object of sequence diagram (144442)
 * ActionScript/JavaScript association code generation error (144788)
 * Segmentation fault on loading corrupted file (145035)
+* Crash when moving all elements in a sequence diagram (145202)
 
 Version 1.5.61
 
