--- a/THANKS
+++ b/THANKS
@@ -77,6 +77,7 @@ Achim Spangler <Achim.Spangler @mnet-online.de>
 Sebastian Stein <seb.stein @gmx.de>
 Andrew Sutton <asutton @cs.kent.edu>
 Tanuj <tagrawal @hss.hns.com>
+Tonton <tonton-lists @team1664.org>
 Brian Thomas <brian.thomas @gsfc.nasa.gov>
 Ferenc Veres <lion @netngine.hu>
 Jean Vittor <jean.vittor @wanadoo.fr>
