Apply r657605 from trunk. Many thanks to Sharan.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=663009

--- a/THANKS
+++ b/THANKS
@@ -64,6 +64,7 @@ Carsten Pfeiffer <pfeiffer @kde.org>
 Ivan Porres <iporres @abo.fi>
 Maciej Puzio <maciek @work.swmed.edu>
 Ruediger Ranft <kdebugs @rranft1.mail.htwm.de>
+Sharan Rao <sharanrao @gmail.com>
 John Ratke <jratke @comcast.net>
 Vincent Ricard <magic @magicninja.org>
 Daniel Richard G. <skunk @iskunk.org>
