fixed by Sharan in commit 663342 BUG:144537
svn path=/trunk/KDE/kdesdk/umbrello/; revision=663381

--- a/THANKS
+++ b/THANKS
@@ -64,6 +64,7 @@ Carsten Pfeiffer <pfeiffer @kde.org>
 Ivan Porres <iporres @abo.fi>
 Maciej Puzio <maciek @work.swmed.edu>
 Ruediger Ranft <kdebugs @rranft1.mail.htwm.de>
+Sharan Rao <sharanrao @gmail.com>
 John Ratke <jratke @comcast.net>
 Vincent Ricard <magic @magicninja.org>
 Daniel Richard G. <skunk @iskunk.org>
@@ -77,6 +78,7 @@ Achim Spangler <Achim.Spangler @mnet-online.de>
 Sebastian Stein <seb.stein @gmx.de>
 Andrew Sutton <asutton @cs.kent.edu>
 Tanuj <tagrawal @hss.hns.com>
+Tonton <tonton-lists @team1664.org>
 Brian Thomas <brian.thomas @gsfc.nasa.gov>
 Ferenc Veres <lion @netngine.hu>
 Jean Vittor <jean.vittor @wanadoo.fr>
