--- a/ChangeLog.2
+++ b/ChangeLog.2
@@ -2,6 +2,9 @@ Version 2.0  (First Qt4/KDE4 based version)
 
 * Bugs/wishes from http://bugs.kde.org:
 * Turn off header/footer and page numbers when printing (69113)
+* Code generation and undo/redo take up too much memory (72644)
+  - Use the KUndoStack derived from QT4 QUndoStack in order to manage commands.
+  - Commands are stored in cmds folder.
 * Recursively scan source files when reverse engineering (109157)
 * Implement the UML 2.0 standard (115269)
   - Sequence Diagram
@@ -24,7 +27,5 @@ Version 2.0  (First Qt4/KDE4 based version)
         * Central buffer nodes.
         * Data stores nodes.
         * Input / Output / Constant Pins.
+* RMB LogicalView->New->Class in treeview creates TWO classes (144537)
 
-* Code generation and undo/redo take up too much memory (72644)
-  - Use the KUndoStack derived from QT4 QUndoStack in order to manage commands.
-  - Commands are stored in cmds folder.
