Apply fix_stacked_vs_tabbed_diagrams from Danny Beullens, see http://www.geeksoc.org/~jr/umbrello/uml-devel/10234.html Thanks for your work Danny! BUG:98204
svn path=/trunk/KDE/kdesdk/umbrello/; revision=666779

--- a/ChangeLog.2
+++ b/ChangeLog.2
@@ -5,6 +5,7 @@ Version 2.0  (First Qt4/KDE4 based version)
 * Code generation and undo/redo take up too much memory (72644)
   - Use the KUndoStack derived from QT4 QUndoStack in order to manage commands.
   - Commands are stored in cmds folder.
+* Switching between tabbed and non-tabbed views requires restart (98204)
 * Recursively scan source files when reverse engineering (109157)
 * Implement the UML 2.0 standard (115269)
   - Sequence Diagram
