Revert the part of r663014 that introduced m_{Widget,Message}List.setAutoDelete(true). The Undo mechanism cannot deal with it. BUG:145762
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=667075

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.71
+
+* Bugs/wishes from http://bugs.kde.org:
+* Crash on deleting class in list view (145762)
+
 Version 1.5.7
 
 * Bugs/wishes from http://bugs.kde.org:
