Add changelog for D code generator
svn path=/trunk/KDE/kdesdk/umbrello/; revision=670998

--- a/ChangeLog.2
+++ b/ChangeLog.2
@@ -29,4 +29,4 @@ Version 2.0  (First Qt4/KDE4 based version)
         * Data stores nodes.
         * Input / Output / Constant Pins.
 * RMB LogicalView->New->Class in treeview creates TWO classes (144537)
-
+* New code generator for D language
