--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Version 1.5.71
 
 * Bugs/wishes from http://bugs.kde.org:
 * Preprocessor keywords ignored which causes endless loop in code import (119125)
+* Code generator for D language (124805)
 * Unstable saves and loads, class names become dirty (145709)
 * Crash on deleting class in list view (145762)
 * Class attribute documentation not generated for python (145916)
