writeClass(): Use the classname instead of the fixed name "TObject". Thanks to Dmitry N. Kurashkin for the patch. BUG:146676
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=674094

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.5.72
+
+* Bugs/wishes from http://bugs.kde.org:
+* Umbrello appends ".xmi" to the saved diagram name when it is told not to do so (146061)
+* Wrong pascal code generation (146676)
+
 Version 1.5.71
 
 * Bugs/wishes from http://bugs.kde.org:
