--- a/THANKS
+++ b/THANKS
@@ -49,6 +49,7 @@ Tobias Koenig <tokoe @kde.org>
 Piotr Kolaczkowski <P.Kolaczkowski @elka.pw.edu.pl>
 Matthias Kretz <kretz @kde.org>
 Thorsten Kunz <tk @bytecrash.net>
+Dmitry N. Kurashkin <dkur @nm.ru>
 Jari-Matti Mäkelä <jmjm @iki.fi>
 Gustavo Madrigal <gmadrigal @nextphere.com>
 martin <mv123q3 @hotmail.com>
