--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Version 1.5.72
 
 * Bugs/wishes from http://bugs.kde.org:
 * Wrong pascal code generation (146676)
+* Crash when linking to undefined xmi.id (146748)
 
 Version 1.5.71
 
