--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Version 1.5.72
 * Bugs/wishes from http://bugs.kde.org:
 * Wrong pascal code generation (146676)
 * Crash when linking to undefined xmi.id (146748)
+* End Activity Symbol gets invalid when line thickness is increased (146925)
 
 Version 1.5.71
 
