updateComponentSize(): Apparently this is invoked while loading. That is bad because it spoils the loaded dimensions. BUG:147069
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=678729

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Version 1.5.72
 * Wrong pascal code generation (146676)
 * Crash when linking to undefined xmi.id (146748)
 * End Activity Symbol gets invalid when line thickness is increased (146925)
+* The size of a fork/join is not restored (147069)
 
 Version 1.5.71
 
