--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Version 1.5.72
 * Crash when linking to undefined xmi.id (146748)
 * End Activity Symbol gets invalid when line thickness is increased (146925)
 * The size of a fork/join is not restored (147069)
+* Crash when changing the association type to containment (147202)
 
 Version 1.5.71
 
