mouseMoveEvent(): Use raw pos of m_widget at call to UMLWidget::adjustUnselectedAssocs() BUG:147810
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=688175

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Version 1.5.72
 * End Activity Symbol gets invalid when line thickness is increased (146925)
 * The size of a fork/join is not restored (147069)
 * Crash when changing the association type to containment (147202)
+* Moving component on diagram results in absurd shape of self-association (147810)
 
 Version 1.5.71
 
