UMLObject::set{Name,Visibility}: Make virtual. UMLAttribute::attributeChanged(): New signal. UMLAttribute::set{Name,Visibility}: New.  Reimplement methods from UMLObject  in order to emit extra signal attributeChanged(). AssociationWidget::slotAttributeChanged(): New slot. Connects to UMLAttribute::  attributeChanged() when the AssociationWidget represents an UMLAttribute.
The extra signal is necessary because the attribute name must already have
been updated at the AssociationWidget by the time UMLObject::emitModified()
is called else UMLView::createAutoAttributeAssociations() will think it needs
to create a new attribute association.

BUG:147919

svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=688793

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ Version 1.5.72
 * The size of a fork/join is not restored (147069)
 * Crash when changing the association type to containment (147202)
 * Moving component on diagram results in absurd shape of self-association (147810)
+* Crash when changing the attribute name (147919)
 
 Version 1.5.71
 
