Add showAttribAssocs to Settings::OptionState.classState FEATURE:147061
svn path=/trunk/KDE/kdesdk/umbrello/; revision=689217

--- a/ChangeLog.2
+++ b/ChangeLog.2
@@ -30,3 +30,4 @@ Version 2.0  (First Qt4/KDE4 based version)
         * Input / Output / Constant Pins.
 * RMB LogicalView->New->Class in treeview creates TWO classes (144537)
 * New code generator for D language
+* Add option for automatic drawing attribute associations in class diagram (147061)
